fixing code spacing css

--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -19,7 +19,8 @@
 .blogLayout{
     margin-top:3rem;
     .gatsby-highlight{
-        margin:3rem 0;
+        margin-top:1rem;
+        margin-bottom:2.5rem
     }
 
     a{
